canged some fields in model and dto